syntax = "proto3";
package DomainServices.CaseService;
option csharp_namespace = "DomainServices.CaseService.Contracts";

import "GrpcDate.proto";

message WorkflowTask {
	int32 TaskId = 1;
	int32 TypeId = 2;
	string Name = 3;
	int32 StateId = 4;
	cis.types.GrpcDate CreatedOn = 5;
}

message GetTaskListRequest {
	int64 CaseId = 1;
}

message GetTaskListResponse {
	repeated WorkflowTask Tasks = 1;
}