syntax = "proto3";
package DomainServices.CaseService;
option csharp_namespace = "DomainServices.CaseService.Contracts";

message CancelTaskRequest {
	int32 TaskIdSB = 1;
}

