syntax = "proto3";
package DomainServices.CaseService;
option csharp_namespace = "DomainServices.CaseService.Contracts";

message ValidateCaseIdRequest {
	int64 CaseId =  1;
	bool ThrowExceptionIfNotFound = 2;
}

message ValidateCaseIdResponse {
	bool Exists = 1;
}